<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
    	android:title="@string/category_touchkey_title">
	    <CheckBoxPreference 
	        android:key="backlight_wakelock"
	        android:title="@string/backlight_wakelock_title_head"
	        android:summary="@string/backlight_wakelock_summary_head"
  			android:defaultValue="false" />
	    <!-- Touch key backlight timeout -->
	    <ListPreference 
	        android:key="backlight_timeout"
	        android:title="@string/backlight_timeout_title_head"
	        android:summary="@string/backlight_timeout_summary_head"
	        android:entries="@array/backlight_timeout_entries"
  			android:entryValues="@array/backlight_timeout_entries_values"
  			android:defaultValue="1600" />
	</PreferenceCategory>
	<PreferenceCategory
    	android:title="@string/category_screen_title">
	    <!-- GSensor calibration -->
	    <Preference 
		android:key="gsensor"
	        android:title="@string/g_sensor_title"
	        android:summary="@string/g_sensor_summary"
		>
		  <intent android:action="com.cyanogenmod.settings.device.GSensor"/>
	    </Preference>
	</PreferenceCategory>
	<PreferenceCategory
    	android:title="@string/category_fast_charge_title">
	    <CheckBoxPreference 
	        android:key="force_fast_charge"
	        android:title="@string/force_fast_charge_head"
	        android:summary="@string/force_fast_charge_summary_head"
  			android:defaultValue="false" />
	</PreferenceCategory>
</PreferenceScreen>
